log/build_2025-04-19_06-35-48/gpio_nav_control/stderr.log
  File "/home/rasp/ros2_ws/install/gpio_nav_control/lib/python3.12/site-packages/gpio_nav_control/button_control.py", line 378
    duration = (abs distance / speed)
                ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

